<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.ferdyrodriguez.loquiero.usecases.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".usecases.login.LoginActivity">

        <include
                layout="@layout/toolbar"
                android:id="@+id/baseToolbar"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp"/>


        <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:src="@drawable/logo_loquiero"
                app:layout_constraintBottom_toTopOf="@id/emailLayout"
                app:layout_constraintTop_toBottomOf="@id/baseToolbar"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={ viewModel.email }"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={ viewModel.password }"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/login"
                android:enabled="@{ viewModel.formIsValid }"
                android:onClick="@{ () -> viewModel.loginUser() }"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>