<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <variable
                name="viewModel"
                type="com.ferdyrodriguez.loquiero.usecases.registration.RegistrationViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".usecases.registration.RegistrationActivity">

        <include
                layout="@layout/toolbar"
                android:id="@+id/baseToolbar"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp"/>


        <TextView
                android:id="@+id/registrationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_registration_form"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@id/emailLayout"
                app:layout_constraintStart_toEndOf="@id/start_guideline"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={ viewModel.email }"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@+id/confirmPasswordLayout"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={ viewModel.password }"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="48dp"
                android:hint="@string/password_confirm"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@id/registrationBtn"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={ viewModel.password2 }"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/registrationBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/register"
                android:visibility="@{ viewModel.formIsValid ? View.VISIBLE : View.INVISIBLE }"
                android:onClick="@{ () -> viewModel.registerUser() }"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/start_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>